test/black-box/v1/4.toc
# Identificadores de funcoes variaveis e objetos
void toc()
  int abc = 765
  boo abc = false
